add initial cv website files

--- a/index.html
+++ b/index.html
@@ -62,8 +62,12 @@
             <td>⭐⭐⭐⭐⭐</td>
         </tr>
         <tr>
-            <td>Soccer</td>
+            <td>Programming</td>
             <td>⭐⭐⭐⭐</td>
+        </tr>
+        <tr>
+            <td>Photography</td>
+            <td>⭐⭐</td>
         </tr>
     </table>
 
